<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aeyoung.postit.communitys.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/item_selector"
        android:stateListAnimator="@drawable/state_list_animator"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="false">

        <Button
            android:id="@+id/first"
            android:drawableTop="@drawable/hello"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/main_hello"
            android:textSize="80px"/>
    </android.support.v7.widget.CardView>


    <com.aeyoung.postit.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/item_selector"
        android:stateListAnimator="@drawable/state_list_animator"
        app:ycCardCornerRadius="5dp"
        app:ycCardElevation="5dp"
        app:ycCardMaxElevation="5dp"
        app:ycCardPreventCornerOverlap="true">

        <Button
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:drawableTop="@drawable/introduce"
            android:gravity="center"
            android:text="@string/main_major_intro"
            android:textSize="80px" />

    </com.aeyoung.postit.YcCardView>


    <com.aeyoung.postit.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:ycCardCornerRadius="5dp"
        app:ycCardElevation="5dp"
        app:ycCardMaxElevation="5dp"
        app:ycCardPreventCornerOverlap="false">

        <Button
            android:id="@+id/four"
            android:drawableTop="@drawable/work"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/main_edu_process"
            android:textSize="80px"/>
    </com.aeyoung.postit.YcCardView>

    <com.aeyoung.postit.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="@drawable/item_selector"
        android:stateListAnimator="@drawable/state_list_animator"
        app:ycCardCornerRadius="5dp"
        app:ycCardElevation="5dp"
        app:ycCardMaxElevation="5dp"
        app:ycCardPreventCornerOverlap="false">

        <Button
            android:id="@+id/five"
            android:drawableTop="@drawable/calendar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/main_schedule"
            android:textSize="80px"/>
    </com.aeyoung.postit.YcCardView>

    <com.aeyoung.postit.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="@drawable/item_selector"
        android:stateListAnimator="@drawable/state_list_animator"
        app:ycCardCornerRadius="5dp"
        app:ycCardElevation="5dp"
        app:ycCardMaxElevation="5dp"
        app:ycCardPreventCornerOverlap="false">

        <Button
            android:id="@+id/six"
            android:drawableTop="@drawable/mail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/main_community"
            android:textSize="80px"/>
    </com.aeyoung.postit.YcCardView>

    <com.aeyoung.postit.YcCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="@drawable/item_selector"
        android:stateListAnimator="@drawable/state_list_animator"
        app:ycCardCornerRadius="5dp"
        app:ycCardElevation="5dp"
        app:ycCardMaxElevation="5dp"
        app:ycCardPreventCornerOverlap="false">

        <Button
            android:id="@+id/seven"
            android:drawableTop="@drawable/question"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/main_app_info"
            android:textSize="80px"/>
    </com.aeyoung.postit.YcCardView>

</LinearLayout>
</ScrollView>