<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.aeyoung.postit.communitys.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60px"
        android:src="@drawable/sw_center"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_margin="18dp"
    android:gravity="center"
    android:text="@string/greeting_main"
    android:textSize="18sp"/>


        <com.aeyoung.postit.YcCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_selector"
            android:stateListAnimator="@drawable/state_list_animator"
            app:ycCardCornerRadius="5dp"
            app:ycCardElevation="5dp"
            app:ycCardMaxElevation="5dp"
            app:ycCardPreventCornerOverlap="true">
        <Button
            android:id="@+id/csintro"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:drawableTop="@drawable/laptop"
            android:gravity="center"
            android:text="@string/computersecurity"
            android:textSize="80px" />
        </com.aeyoung.postit.YcCardView>

        <com.aeyoung.postit.YcCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/item_selector"
            android:stateListAnimator="@drawable/state_list_animator"
            app:ycCardCornerRadius="5dp"
            app:ycCardElevation="5dp"
            app:ycCardMaxElevation="5dp"
            app:ycCardPreventCornerOverlap="true">
        <Button
            android:id="@+id/smartintro"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@null"
            android:drawableTop="@drawable/phone"
            android:gravity="center"
            android:text="@string/smartit"
            android:textSize="80px" />
        </com.aeyoung.postit.YcCardView>

</LinearLayout>
</ScrollView>